# Frame-Mind-Studio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  test_report.md
backend/: Dockerfile  pyproject.toml
backend-java/: Dockerfile  pom.xml
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/core/agent/: base.py  orchestrator.py
backend/app/core/agent/memory/: chroma_store.py  working_memory.py
backend/app/core/agent/tools/: format_converter.py  web_search.py
backend/app/core/ai_gateway/: budget.py  catalog.py  provider.py
backend/app/core/api/: websocket.py
backend/app/core/api/v1/: projects.py  router.py  settings.py
backend/app/core/models/: agent_session.py  project.py
backend/app/core/schemas/: agent.py  project.py
backend/app/modules/scriptmind/: router.py
backend/app/modules/scriptmind/agents/: character_designer.py  script_doctor.py  showrunner.py  world_builder.py
backend/app/modules/scriptmind/api/: agent.py  characters.py  foreshadows.py  quality.py  scripts.py
backend/app/modules/scriptmind/models/: character.py  foreshadow.py  script.py  version.py
backend/app/modules/scriptmind/schemas/: character.py  foreshadow.py  script.py
backend/app/modules/scriptmind/services/: import_service.py  quality_service.py  script_service.py
docs/: AG_UI Doc.md  Product-Design-Specification.md  ProviderRefDoc.md  ScriptsDataModel.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+419 files in other folders)
